# river

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  readme.md
bridge/: readme.md
client/: Makefile  README.md  demos_config.py  fals.py  falsification.py  monit.py  monitoring.py  pyproject.toml  readme.md  requirements.txt  sign.py  sign_perturbation.py  state.py
client/plots/: accdata.py  afdata.py  plot.py  plotacc.py  plotaf.py  plotap.py
dashboard/: Makefile  dashboard.py  pyproject.toml  requirements.txt
data/: .gitignore  README.md  process.py
githooks/: pre-commit
monitor/: Makefile  go.mod  main.go  probe.c  readme.md
my_types/: format_types.go  result_types.go  server_types.go
server/: README.md  readme.md  server.go
simulator/: README.md  gen.go  probe.c  readme.md  result_types.go  simulator.go
simulator/_utils/: list_signals.py
simulator/demos/: M1_C1_config.json  M1_C2_config.json  M1_C3_config.json  M2_C1_config.json  M2_C2_config.json  M3_C1_config.json  M3_C2_config.json  M3_C3_config.json  README.md
stopper/: .gitignore  gen.go  go.mod  main.go  readme.md
