[project]
name = "river"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dash==4.0.0",
    "matplotlib==3.10.8",
    "msgpack==1.1.2",
    "numpy==2.4.6",
    "pandas==3.0.1",
    "plotly==6.6.0",
    "redis==7.3.0",
]

[dependency-groups]
dev = [
    "nodeenv==1.10.0",
    "platformdirs==4.5.1",
    "pysort==1.0.0",
    "typing-extensions==4.15.0",
    "ruff==0.12.0",
    "pyright==1.1.407",
    "pre-commit>=4.6.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["client", "dashboard"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
