[project]
name = "river-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.8",
    "msgpack==1.1.2",
    "numpy==2.4.6",
    "redis==7.3.0",
]

[dependency-groups]
dev = [
    "nodeenv==1.10.0",
    "platformdirs==4.5.1",
    "pyright==1.1.407",
    "pysort==1.0.0",
    "typing-extensions==4.15.0",
    "yapf==0.43.0",
]

[tool.uv]
package = false
